--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+button {
+  padding: 5px 15px;
+  margin: 10px;
+  width: 50px;
+}
+h1 {
+  margin: 10px;
+}
